      setting of "1", which has the effect of many round trips 
      being sent to Oracle.  This actually works well in 
      conjunction with BLOB/CLOB-bound cursors, of which 
      there are any number available but only for the life of 
      that row request (so BufferedColumnRow is still needed, 
      but less so). [ticket:1062]


0.4.6
=====
- orm
    - Fix to the recent relation() refactoring which fixes
      exotic viewonly relations which join between local and
      remote table multiple times, with a common column shared
      between the joins.

    - Also re-established viewonly relation() configurations
      that join across multiple tables.

    - Added experimental relation() flag to help with
      primaryjoins across functions, etc.,
      _local_remote_pairs=[tuples].  This complements a complex
      primaryjoin condition allowing you to provide the
      individual column pairs which comprise the relation's
      local and remote sides.  Also improved lazy load SQL
      generation to handle placing bind params inside of
      functions and other expressions.  (partial progress
      towards [ticket:610])
    
    - repaired single table inheritance such that you 
      can single-table inherit from a joined-table inherting
      mapper without issue [ticket:1036].
      
    - Fixed "concatenate tuple" bug which could occur with
      Query.order_by() if clause adaption had taken place.
      [ticket:1027]
      
    - Removed ancient assertion that mapped selectables require
      "alias names" - the mapper creates its own alias now if
      none is present.  Though in this case you need to use the
      class, not the mapped selectable, as the source of column
      attributes - so a warning is still issued.

    - fixes to the "exists" function involving inheritance (any(), has(),
      ~contains()); the full target join will be rendered into the
      EXISTS clause for relations that link to subclasses.
      